# Delta

./: CMakeLists.txt  qres.qrc
res/styles/: mainwindow.css  style.css
res/ui/: mainwindow.ui
src/: main.cpp
src/Finder/: FinderClass.cpp  FinderClass.h
src/MainWindow/: MainWindow.cpp  MainWindow.h
